2009-05-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_LoadAU_RW):
	try to get the data-size when it's not given in the header

	* avatar-audio.c (avt_LoadAU_RW):
	check the number of channels

2009-05-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_LoadAU_RW):
	rewritten not to waste memory (but may be slower)
	(avt_get_RWdata): new function

2009-05-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-default.c (avt_default):
	use XPM image

	* avatar.c (avt_import_XPM):
	try to avoid loading SDL_image if possible
	avatar-default.c (avt_default): use avt_import_XPM

	* avatar.c (avt_show_image_XPM):
	use avt_import_XPM

	* avatar-audio.c (avt_LoadAU_RW):
	support for 24/32Bit linear PCM (degraded)

2009-05-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_initialize_audio):
	bell is now raw 8kHz mu-law audio data

2009-04-30  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c ():
	SDL_MixAudio -> SDL_memcpy

2009-04-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_load_raw_audio_data):
	adjust endianess while loading

2009-04-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio.c (avt_LoadAU_RW)
	(avt_load_au_file, avt_load_au_data):
	new functions

	* akfavatar.h, avatar-audio.c (avt_load_audio_RW)
	(avt_load_audio_file, avt_load_audio_data):
	new functions

2009-04-11  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio.c (avt_load_raw_audio_data):
	new function, replaces avt_load_raw_data
	support for mu-law and a-law
	avatarsay.c, akfavatar.pas: adapted

2009-03-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command):
	removed commands: rawaudio, rawaudioloop, loadrawaudio
	(handle_loadaudio_command): also handles raw audo files now
	(check_wave): new macro
	(check_wave_file): new function
	many other functions also adapted

2009-03-16  Andreas K. Foerster  <info@akfoerster.de>
